# pytest-minio-mock

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  LICENSE  README.md  conftest.py  minio_mock.py  pyproject.toml  pytest.ini  requirements-testing.txt  requirements.txt  requirements_testing.txt  setup.py  tox.ini
.github/workflows/: publish-to-pypi-workflow.yaml  publish-to-testpypi-workflow.yaml  test-pipeline.yaml  testing-workflow.yaml
docs/: requirements.txt
pytest_minio_mock/: __init__.py  plugin.py
pytst_minio_mock/: __init__.py
src/pytest_minio_mock/: conftest.py
tests/: conftest.py  test_minio_mock.py  test_minio_mock_bucket.py  test_minio_mock_client.py  test_minio_mock_objects.py
